fixed z-index issue with start screen pop-up

--- a/src/_styles/home.css
+++ b/src/_styles/home.css
@@ -36,6 +36,7 @@
     background-color:#fff;
     background-color: #fff;
     padding: 30px 15px;
+    z-index:20;
 }
 
 .closebtn {
@@ -108,6 +109,7 @@
     width: 450px;
     width: 500px;
     font-size: 1.25em;
+ 
 }
 
 .home main{
